# a-crawley

./: .env.example  .gitignore  AGENTS.md  BACKLOG.md  PRODUCT.md  README.md  ROADMAP.md  package-lock.json  package.json  pyproject.toml
.cursor/rules/: architect-developer.mdc  product-owner.mdc  ux-expert.mdc
apps/crawley/: .gitignore  README.md  index.html  package.json  vite.config.ts
apps/crawley/analytics/: README.md
apps/crawley/src/: main.tsx
crawley-ui/: README.md  package-lock.json  package.json  vite.config.ts
crawley-ui/src/: main.tsx
docs/: architecture.md  migration-monorepo.md  migration-phone-preview.md  ux.md
docs/adr/: 001-fastapi-htmx.md  002-duckdb-filesystem.md  003-single-process-threads.md  004-module-contract-registry.md  005-llm-provider-interface.md  006-write-back-confirm.md  007-local-llm-ollama.md  008-shared-context.md  009-phone-preview-analytics.md  010-monorepo-layout.md
docs/api/: openapi-v1.json  presentation-v1.md
docs/daemons/: asx-scanner.md  gmail-ingest.md
docs/sprints/: current.md
docs/ux/: sender-inbox-asx.md
services/: README.md
services/crawley/: .env.example  README.md  pyproject.toml
src/crawley/: __init__.py  __main__.py  app.py  bind.py  day_brief.py  git_update.py  google_oauth.py  prompts.py  settings.py  shared_context.py  writeback.py
tests/: conftest.py  test_gmail_oauth_pkce.py  test_investment_fetch.py  test_phase2.py  test_phase34.py  test_sprint11_update.py  test_sprint12_sender_inbox.py  test_sprint2.py  test_sprint5.py  test_sprint_31_analytics_api.py  test_sprint_32_ui_api.py  test_sprint_34_gmail_ingest.py  test_sprint_35_cutover.py  test_sprints_18_20.py  test_sprints_21_24.py
tests/_retired_htmx/: README.md  test_phase34.py  test_sprints_15_17.py
(+231 files in other folders)
