[project]
name = "crawley"
version = "0.1.0"
description = "Local-first personal assistant (Crawley)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
crawley = "crawley.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crawley"]

[tool.uv]
package = true
