[project]
name = "crawley"
version = "0.1.0"
description = "Local-first personal assistant (Crawley)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bleach>=6.4.0",
    "duckdb>=1.5.4",
    "fastapi>=0.115.0",
    "google-api-python-client>=2.198.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "markdown-it-py>=4.2.0",
    "openai>=2.45.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
crawley = "crawley.__main__:main"
crawley-asx-scanner = "crawley.daemons.asx_scanner:main"
crawley-gmail-ingest = "crawley.daemons.gmail_ingest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crawley"]

[tool.hatch.build.targets.wheel.force-include]
"src/crawley/shell/templates" = "crawley/shell/templates"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
    "network: hits real external network (deselect with -m 'not network')",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
